consolidate and clean up.